compiler/lume_parser/src/snapshots/lume_parser__parser__tests__conditional_snapshots@if_statements.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"if true { let a = 0; let b = 0; }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    If(
                        IfCondition {
                            cases: [],
                            location: Location(
                                20..53,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..55,
                ),
            },
            location: Location(
                0..55,
            ),
        },
    ),
]
