compiler/lume_parser/src/snapshots/lume_parser__parser__tests__conditional_snapshots@unless_else_if.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr_err(\"unless true { } else if false {}\")"
---
UnlessElseIfClause {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "unless true { } else if false {}",
        package: PackageId(
            0,
        ),
    },
    range: 16..20,
}
