compiler/lume_parser/src/snapshots/lume_parser__parser__tests__conditional_snapshots@unless_statement.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"unless true { let a = 0; }\")"
---
[
    Unless(
        UnlessCondition {
            cases: [],
            location: Location(
                0..26,
            ),
        },
    ),
]
