compiler/lume_parser/src/snapshots/lume_parser__parser__tests__doc_comments_snapshots@class.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"/// This is a doc comment\n            class Foo { }\"#)"
---
[
    TypeDefinition(
        Class(
            ClassDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        44..47,
                    ),
                },
                builtin: false,
                members: [],
                type_parameters: [],
                location: Location(
                    38..51,
                ),
                documentation: Some(
                    "This is a doc comment",
                ),
            },
        ),
    ),
]
