compiler/lume_parser/src/snapshots/lume_parser__parser__tests__doc_comments_snapshots@method.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"impl Foo {\n                /// This is a doc comment\n                pub fn bar() -> void { }\n            }\"#)"
---
[
    Impl(
        Implementation {
            visibility: Private(
                Private {
                    location: Location(
                        0..4,
                    ),
                },
            ),
            name: Scalar(
                ScalarType {
                    name: Path {
                        name: Identifier {
                            name: "Foo",
                            location: Location(
                                5..8,
                            ),
                        },
                        root: NamespacePath {
                            path: [],
                            location: Location(
                                0..0,
                            ),
                        },
                        location: Location(
                            5..8,
                        ),
                    },
                },
            ),
            methods: [
                MethodDefinition {
                    visibility: Public(
                        Public {
                            location: Location(
                                69..72,
                            ),
                        },
                    ),
                    external: false,
                    name: Identifier {
                        name: "bar",
                        location: Location(
                            76..79,
                        ),
                    },
                    parameters: [],
                    type_parameters: [],
                    return_type: Some(
                        Scalar(
                            ScalarType {
                                name: Path {
                                    name: Identifier {
                                        name: "void",
                                        location: Location(
                                            85..89,
                                        ),
                                    },
                                    root: NamespacePath {
                                        path: [],
                                        location: Location(
                                            0..0,
                                        ),
                                    },
                                    location: Location(
                                        85..89,
                                    ),
                                },
                            },
                        ),
                    ),
                    block: Block {
                        statements: [],
                        location: Location(
                            90..93,
                        ),
                    },
                    location: Location(
                        69..93,
                    ),
                    documentation: Some(
                        "This is a doc comment",
                    ),
                },
            ],
            location: Location(
                0..107,
            ),
        },
    ),
]
